<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.album_create.AlbumCreateFragment">

    <LinearLayout
        android:id="@+id/add_album_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <TextView
            android:id="@+id/textProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_album"
            android:lines="1"
            android:ellipsize="end"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@color/purple_500"
                android:text="@string/x"
                android:textColor="@color/teal_700"
                android:textSize="28sp"
                app:backgroundTint="@color/purple_500" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/coverAlbumLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Cover"
        android:labelFor="@+id/coverAlbum"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/coverAlbum"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="38sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="5dp"
        android:background="@color/secondary_90"
        android:textColor="@color/edit_text_color"
        android:inputType="text"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverAlbumLabel" />

    <TextView
        android:id="@+id/nameAlbumLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Album Name"
        android:labelFor="@id/nameAlbum"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverAlbum" />

    <EditText
        android:id="@+id/nameAlbum"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="38sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="5dp"
        android:background="@color/secondary_90"
        android:textColor="@color/edit_text_color"
        android:inputType="text"
        android:maxLines="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAlbumLabel" />

    <TextView
        android:id="@+id/releaseDateAlbumLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/nameAlbum"
        android:gravity="start"
        android:text="Release Date"
        android:labelFor="@+id/dateAlbumDatepicker"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAlbum" />

    <EditText
        android:id="@+id/dateAlbumDatepicker"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="38sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="5dp"
        android:autofillHints="01/01/1999"
        android:background="@color/secondary_90"
        android:textColor="@color/edit_text_color"
        android:clickable="true"
        android:focusable="true"
        android:inputType="date"
        android:maxLines="1"
        android:focusedByDefault="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateAlbumLabel" />


    <TextView
        android:id="@+id/descriptionAlbumLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Description"
        android:labelFor="@+id/descripcionAlbumTextField"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateAlbumDatepicker" />

    <EditText
        android:id="@+id/descripcionAlbumTextField"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="38sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="top"
        android:paddingLeft="5dp"
        android:background="@color/secondary_90"
        android:textColor="@color/edit_text_color"
        android:inputType="text"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionAlbumLabel" />


    <TextView
        android:id="@+id/generoAlbumLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Genre"
        android:labelFor="@id/genreAlbumTextField"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionAlbumTextField" />

    <Spinner
        android:id="@+id/genreAlbumTextField"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="38sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/secondary_90"
        android:textColor="@color/edit_text_color"
        android:contentDescription="Seleccione un genero"
        android:entries="@array/Generos"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generoAlbumLabel" />

    <TextView
        android:id="@+id/recordLabelAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Record Label"
        android:labelFor="@id/recordLabelAlbumTextField"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreAlbumTextField" />


    <Spinner
        android:id="@+id/recordLabelAlbumTextField"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="38sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/secondary_90"
        android:textColor="@color/edit_text_color"
        android:contentDescription="Seleccione una disquera"
        android:entries="@array/RecordLabel"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordLabelAlbum" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="10dp"
        android:text="Save"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/save_color"
        app:cornerRadius="29dp"
        app:iconTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordLabelAlbumTextField"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="10dp"
        android:text="Cancel"
        android:textAlignment="center"
        android:textColor="@color/save_color"
        app:backgroundTint="@color/white"
        app:cornerRadius="29dp"
        app:iconTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSaveAlbum"
        app:layout_constraintTop_toBottomOf="@+id/recordLabelAlbumTextField"
        app:layout_constraintVertical_bias="0.97"
        app:strokeColor="@color/cancel_color" />


</androidx.constraintlayout.widget.ConstraintLayout>