<resources>
    <string name="app_name">App Vinilos</string>
    <string name="view_artist_albums">View Albums</string>
    <string name="album_title">Albums</string>
    <string name="album_detail">Album Detail</string>
    <string name="artist_detail">Artist Detail</string>
    <string name="artist_title">Artists</string>
    <string name="collector_title">Collectors</string>
    <string name="album_detail_artists_title">Artists:</string>
    <string name="album_detail_tracks_title">Tracks:</string>
    <string name="album_cover_desc">Album\'s cover</string>
    <string name="collector_album_cover_desc">Collector Albums\'s cover</string>
    <string name="element_text">performer</string>
    <string name="track_text">Track item</string>
    <string name="element_text_track">track</string>
    <string name="element_text_duration">duration</string>
    <string name="visitor_login">Visitor</string>
    <string name="collector_login">Collector</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="vinilos">Vinilos</string>
    <string name="artist_detail_placeholder">Here comes the description of this good band</string>
    <string name="add_track">Add track</string>
    <string name="add_album">Add album</string>
    <string name="x">X</string>
    <string name="album_name_track">Album Name</string>
    <string name="spinner_album_add_track">Select one album</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="track_name">Track Name</string>
    <string name="track_duration">Duration</string>
    <string name="add_album_btn">Add Album</string>
    <string name="add_track_btn">Add Track</string>
    <string name="duration_placeholder">mm:ss</string>
    <string name="track_name_placeholder">Enter Track Name</string>
    <string name="collectorAlbumCoverDesc">album cover image</string>
    <string name="collectorCoverDesc">collector cover image</string>
    <string name="app_logo">App logo</string>
    <string name="album_photo_base">Album photo base</string>
    <string name="artist_photo_bsse">Artist photo bsse</string>
    <string name="content_descriptor_menu">Principal Menu</string>
    <string name="title">Title</string>
    <string name="add_track_to_album">Add a new track to the album</string>
    <string name="view_artist_detail_performer_name">View Artist Detail @{performer.name}</string>
    <string name="fragment_artist_detail_title">Title</string>
    <string name="title_artist_detail_content_description">Nombre del Artista o Banda:</string>
</resources>