...
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.collector_detail.CollectorDetailFragment"
    android:id="@+id/collector_detail_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

...
            app:layout_constraintTop_toBottomOf="@+id/containerImageArtist"
            tools:listitem="@layout/collector_album_item"
            android:clickable="false"
            android:contextClickable="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAlbum"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_album_btn"
            android:autoSizeTextType="uniform"
...
