<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/album_icon"
        android:title="@string/album_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/artist_icon"
        android:title="@string/artist_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_collector"
        android:icon="@drawable/collector_icon"
        android:title="@string/collector_title"
        app:showAsAction="ifRoom" />

</menu>